--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ justify-content: space-between;
 }
 nav {
     padding: 30px;
-    background-color: lightred;
+    background-color: lightcoral;
 }
 .menu li a {
     text-decoration: none;
