--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ nav {
 
 header {
     min-height: 1000px;
-    background-image: url("image_header.jpg"); /* Виправлено шлях */
+    background-image: url("image_header.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -51,8 +51,9 @@ header {
 }
 
 header h1 {
-    font-size: 62px;
-    color: #222; /* Замість білого */
+    font-size: 36px;
+    color: #222;
+    transform: translateY(-50px)
 }
 
 .container2 {
